# pycasting

./: .gitignore  README.md  pyproject.toml
examples/: example_scenario.json
scripts/: generate_json_schema.py  load_scenario.py
src/: util.py
src/pycasting/: dataclasses_actuals.py  dataclasses_predict.py  main.py  misc.py  predictors.py
src/pycasting/calc/: cashflow.py  customers.py  forecasting.py  headcount.py  predictors.py  sales.py  usage.py
src/pycasting/dataclasses/: actuals.py  budget.py  customer.py  headcount.py  predictions.py  scenario.py
src/pycasting/forecasting/: headcount.py
src/pycasting/modeling/: misc.py  usage.py
src/pycasting/predicting/: headcount.py  misc.py  registry.py  usage.py
src/pycasting/pydanticmodels/: actuals.py  predictions.py
test/: conftest.py
test/calc/: test_cashflow.py  test_customers.py  test_headcount.py  test_predictors_usage.py  test_sales.py
test/modeling/: test_usage.py
