[tool.poetry]
name = "pycasting"
version = "0.0.1a1"
description = "Python-based financial forecasting for startups."
authors = ["Austin Howard <austin@tangibleintelligence.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8,<3.11"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
